First stab at configuring build for Java 11