@@ -81,14 +81,11 @@ subprojects { subproj ->
     apply from: rootProject.file('gradle/code-coverage.gradle')
     apply from: rootProject.file('gradle/code-quality.gradle')
 
-    subproj.tasks.withType(JavaCompile) {
-        sourceCompatibility = subproj.sourceCompatibility
-        targetCompatibility = subproj.targetCompatibility
-    }
-
     repositories {
         jcenter()
     }
+
+    subproj.ext.moduleName = 'org.kordamp.' + subproj.name.replaceAll('-', '.') - '.pack'
 
     if (subproj.name.contains('ikonli')) {
         javadoc {
@@ -132,6 +129,43 @@ subprojects { subproj ->
         }
 
         apply from: rootProject.file('gradle/publishing.gradle')
+    }
+
+    afterEvaluate {
+        compileJava {
+            doFirst {
+                options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        compileTestJava {
+            inputs.property('moduleName', subproj.moduleName)
+            doFirst {
+                options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'junit',
+                    '--add-reads', "$subproj.moduleName=junit",
+                    '--patch-module', "$subproj.moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+                ]
+                classpath = files()
+            }
+        }
+
+        test {
+            inputs.property('moduleName', subproj.moduleName)
+            doFirst {
+                jvmArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'ALL-MODULE-PATH',
+                    '--add-reads', "$subproj.moduleName=junit",
+                    '--patch-module', "$subproj.moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+                ]
+                classpath = files()
+            }
+        }
     }
 }
 
